--- a/index.html
+++ b/index.html
@@ -40,6 +40,32 @@
       flex-direction: column;
     }
 
+    /* Loader */
+    #loader {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-color: #0A0A0A;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+      transition: opacity 0.8s ease;
+    }
+
+    #loader img {
+      width: 280px;
+      max-width: 80%;
+      animation: pulse 2s infinite ease-in-out;
+    }
+
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.05); opacity: 0.75; }
+    }
+
     header {
       text-align: center;
       padding: 0 20px 20px;
@@ -161,6 +187,7 @@
       text-transform: uppercase;
       margin-bottom: 16px;
       font-family: 'Futura PT W08 Extra Bold', 'League Spartan', sans-serif;
+      text-align: center;
     }
 
     .footer-icons {
@@ -212,6 +239,11 @@
   </style>
 </head>
 <body>
+
+  <!-- LOADING SCREEN -->
+  <div id="loader">
+    <img src="tagline.png" alt="Burn the Mask. Speak the Truth." />
+  </div>
 
   <!-- HEADER -->
   <header>
@@ -298,7 +330,7 @@
         <div class="footer-tagline">
           <img src="tagline.png" alt="Burn the Mask. Speak the Truth.">
         </div>
-        <h4 style="font-size: 13px; background: linear-gradient(90deg,#C2E9C1,#6DA667); -webkit-background-clip: text; color: transparent; text-align: center;">
+        <h4 style="font-size: 13px; background: linear-gradient(90deg,#C2E9C1,#6DA667); -webkit-background-clip: text; color: transparent;">
           Follow & Connect
         </h4>
         <div class="footer-icons">
@@ -323,6 +355,15 @@
       </p>
     </div>
   </footer>
+
+  <!-- Fade out loader on page load -->
+  <script>
+    window.addEventListener('load', () => {
+      const loader = document.getElementById('loader');
+      loader.style.opacity = 0;
+      setTimeout(() => loader.style.display = 'none', 800);
+    });
+  </script>
 
 </body>
 </html>
