--- a/index.html
+++ b/index.html
@@ -6,28 +6,20 @@
   <title>Download Center | Daren Prince</title>
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <!-- Social metadata -->
   <meta property="og:title" content="Daren Prince | Download Center for Press Kits, Brand Assets & VIP Content" />
   <meta property="og:description" content="Access official media kits, brand assets, press releases, and exclusive bonus content from Daren Prince." />
   <meta property="og:image" content="https://files.darenprince.com/og-image.jpg" />
   <meta property="og:url" content="https://files.darenprince.com/" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- Google Fonts fallback -->
-  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@500;800&display=swap" rel="stylesheet" />
 
   <style>
-    @font-face {
-      font-family: 'Futura PT W08 Extra Bold';
-      src: url('Futura PT W08 Extra Bold.woff') format('woff');
-      font-weight: 800;
-      font-style: normal;
-    }
-
     html, body {
       height: 100%;
       margin: 0;
       padding: 0;
+      overflow-x: hidden; /* Prevent horizontal scroll from any element */
     }
 
     body {
@@ -66,29 +58,147 @@
       50% { transform: scale(1.05); opacity: 0.75; }
     }
 
+    /* === NEW NAVIGATION STYLES (MATCHING CODEPEN) === */
+    .header-nav {
+      background-color: #212121;
+      box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
+      position: sticky;
+      top: 0;
+      width: 100%;
+      z-index: 3;
+      padding: 15px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-sizing: border-box;
+      min-height: 70px;
+    }
+
+    .header-nav .logo img {
+      max-width: 100px;
+      height: auto;
+      display: block;
+      padding: 0;
+    }
+
+    /* Menu Button Styles (Hamburger) */
+    .menu-btn {
+      display: none;
+    }
+
+    .menu-icon {
+      cursor: pointer;
+      display: none;
+      padding: 10px;
+      position: relative;
+      user-select: none;
+      z-index: 5;
+    }
+
+    .menu-icon .navicon {
+      background: #FDFDFD;
+      display: block;
+      height: 2px;
+      position: relative;
+      transition: background .2s ease-out;
+      width: 20px;
+    }
+
+    .menu-icon .navicon:before,
+    .menu-icon .navicon:after {
+      background: #FDFDFD;
+      content: '';
+      display: block;
+      height: 100%;
+      position: absolute;
+      transition: all .2s ease-out;
+      width: 100%;
+    }
+
+    .menu-icon .navicon:before {
+      top: 6px;
+    }
+
+    .menu-icon .navicon:after {
+      top: -6px;
+    }
+
+    /* Hamburger Animation */
+    .menu-btn:checked ~ .menu-icon .navicon {
+      background: transparent;
+    }
+
+    .menu-btn:checked ~ .menu-icon .navicon:before {
+      transform: rotate(-45deg);
+      top: 0;
+    }
+
+    .menu-btn:checked ~ .menu-icon .navicon:after {
+      transform: rotate(45deg);
+      top: 0;
+    }
+
+    /* Main Navigation List (Desktop) */
+    .menu {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      overflow: hidden;
+      background-color: #212121;
+      display: flex;
+      align-items: center;
+      height: auto;
+      position: relative;
+      top: auto;
+      left: auto;
+      width: auto;
+      transform: translateX(0);
+    }
+
+    .menu li a {
+      display: block;
+      padding: 15px 20px;
+      text-decoration: none;
+      color: #D5D5D5;
+      font-family: 'Urbanist', sans-serif;
+      font-weight: 500;
+      transition: background-color 0.3s ease, color 0.3s ease;
+    }
+
+    .menu li a:hover {
+      background-color: #070A06;
+      color: #C2E9C1;
+    }
+
+    /* Active Page Styling */
+    .menu li a.active-page {
+      color: #C2E9C1;
+      font-weight: 800;
+    }
+
+    /* === END NEW NAVIGATION STYLES === */
+
     header {
       text-align: center;
-      padding: 0 20px 20px;
+      padding: 20px;
     }
 
     header img {
-      margin-top: 0;
-      padding-bottom: 20px;
-      max-width: 180px;
-      height: auto;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
+      display: none;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+      font-family: 'Urbanist', sans-serif;
+      font-weight: 800;
+      color: #B8BAB7;
     }
 
     h1 {
       text-align: center;
-      color: #B8BAB7;
       font-size: 18px;
       letter-spacing: 1px;
       text-transform: uppercase;
       margin-bottom: 10px;
-      font-family: 'Futura PT W08 Extra Bold', 'League Spartan', sans-serif;
     }
 
     .intro-text {
@@ -105,10 +215,11 @@
       max-width: 960px;
       margin: 0 auto;
       flex: 1;
+      box-sizing: border-box;
     }
 
     .file-entry {
-      background-color: #3B3C3B;
+      background-color: #212121;
       border-radius: 8px;
       padding: 20px;
       display: flex;
@@ -131,22 +242,25 @@
     }
 
     .file-name {
-      font-weight: bold;
+      font-family: 'Urbanist', sans-serif;
+      font-weight: 800;
       margin-bottom: 10px;
-      font-family: 'Futura PT W08 Extra Bold', 'League Spartan', sans-serif;
     }
 
     .buttons {
       display: flex;
       gap: 12px;
+      flex-wrap: nowrap;
     }
 
     .btn {
       padding: 10px 18px;
       text-decoration: none;
-      font-weight: bold;
       border-radius: 5px;
       text-align: center;
+      font-family: 'Urbanist', sans-serif;
+      font-weight: 700;
+      white-space: nowrap;
     }
 
     .view-btn {
@@ -161,7 +275,7 @@
 
     footer {
       flex-shrink: 0;
-      background: linear-gradient(to bottom, #1B1B1B 0%, #0A0A0A 40%, #070A06 100%);
+      background: linear-gradient(to bottom, #212121 0%, #0A0A0A 40%, #070A06 100%);
       color: #D5D5D5;
       padding: 60px 20px 30px;
       font-family: 'Helvetica Neue', sans-serif;
@@ -170,6 +284,7 @@
     .footer-tagline {
       text-align: center;
       padding: 16px 0;
+      margin-bottom: 25px;
     }
 
     .footer-tagline img {
@@ -186,7 +301,12 @@
       font-size: 14px;
       text-transform: uppercase;
       margin-bottom: 16px;
-      font-family: 'Futura PT W08 Extra Bold', 'League Spartan', sans-serif;
+      font-family: 'Urbanist', sans-serif;
+      font-weight: 800;
+      text-align: left;
+    }
+    
+    footer div:nth-child(4) h4 {
       text-align: center;
     }
 
@@ -209,11 +329,28 @@
       transform: scale(1.1);
     }
 
+    /* Media Queries for Responsiveness */
     @media (max-width: 600px) {
       .file-entry {
         flex-direction: row;
         align-items: flex-start;
+        text-align: left;
       }
+      .file-entry img {
+        margin-bottom: 0;
+      }
+      .buttons {
+        justify-content: flex-start;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        gap: 12px;
+      }
+      .btn {
+        min-width: unset;
+        flex-grow: 0;
+        flex-basis: auto;
+      }
+
 
       footer h4 {
         margin-top: 0 !important;
@@ -235,28 +372,88 @@
       form button {
         margin-bottom: 0;
       }
+
+      /* === MOBILE NAVIGATION REVISION (SLIDE-OUT FROM LEFT) === */
+      .menu-icon {
+        display: block;
+      }
+
+      .menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 250px;
+        height: 100%;
+        background-color: #313131;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        padding-top: 80px;
+        transition: transform 0.3s ease-out;
+        transform: translateX(-100%);
+        box-sizing: border-box;
+        z-index: 4;
+      }
+
+      .menu-btn:checked ~ .menu {
+        transform: translateX(0);
+      }
+
+      .menu li {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 5px;
+      }
+
+      .menu li a {
+        padding: 15px 20px;
+        width: 100%;
+        box-sizing: border-box;
+      }
+
+      /* Transparent overlay when menu is open */
+      .menu-btn:checked ~ body::after {
+        content: '';
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 2;
+      }
+      /* === END MOBILE NAVIGATION REVISION === */
     }
   </style>
 </head>
 <body>
 
-  <!-- LOADING SCREEN -->
   <div id="loader">
     <img src="tagline.png" alt="Burn the Mask. Speak the Truth." />
   </div>
 
-  <!-- HEADER -->
-  <header>
-    <a href="https://www.darenprince.com">
+  <nav class="header-nav">
+    <a href="https://www.darenprince.com" class="logo">
       <img src="logo-white.png" alt="Daren Prince Official Logo" />
     </a>
+    <input class="menu-btn" type="checkbox" id="menu-btn" />
+    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+    <ul class="menu">
+      <li><a href="https://www.darenprince.com/bio">Bio</a></li>
+      <li><a href="https://www.darenprince.com/books">Books</a></li>
+      <li><a href="mailto:press@darenprince.com">Press</a></li>
+      <li><a href="#" class="active-page">Download Center</a></li>
+      <li><a href="mailto:contact@darenprince.com">Contact</a></li>
+    </ul>
+  </nav>
+
+  <header>
     <h1>Download Center</h1>
     <p class="intro-text">
       Welcome to the official Download Center for Daren Prince. This is your one-stop hub for press kits, brand assets, media releases, and exclusive bonus content available to VIP subscribers and media professionals.
     </p>
   </header>
 
-  <!-- MAIN CONTENT -->
   <main>
     <div class="file-entry">
       <img src="presskit-thumb-portrait.png" alt="Cover image of Game On! Press Kit & Brand Guide" />
@@ -273,11 +470,9 @@
     </div>
   </main>
 
-  <!-- FOOTER -->
   <footer>
     <div style="max-width: 1200px; margin: auto; display: flex; flex-wrap: wrap; gap: 40px; justify-content: space-between;">
 
-      <!-- Logo & Bio -->
       <div style="flex: 1 1 200px;">
         <a href="https://www.darenprince.com">
           <img src="logo-footer-white.png" alt="Daren Prince Footer Logo" style="max-width: 100px; margin-bottom: 20px;" />
@@ -287,7 +482,6 @@
         </p>
       </div>
 
-      <!-- Navigation -->
       <div style="flex: 1 1 150px;">
         <h4 style="background: linear-gradient(90deg,#C2E9C1,#87BD72); -webkit-background-clip: text; color: transparent;">
           Explore
@@ -299,7 +493,6 @@
         </ul>
       </div>
 
-      <!-- Newsletter -->
       <div style="flex: 1 1 250px;">
         <h4 style="font-size: 16px; background: linear-gradient(90deg,#87BD72,#456F3A); -webkit-background-clip: text; color: transparent;">
           Stay Connected
@@ -325,7 +518,6 @@
         </form>
       </div>
 
-      <!-- Social + Tagline -->
       <div style="flex: 1 1 280px;">
         <div class="footer-tagline">
           <img src="tagline.png" alt="Burn the Mask. Speak the Truth.">
@@ -356,7 +548,6 @@
     </div>
   </footer>
 
-  <!-- Fade out loader on page load -->
   <script>
     window.addEventListener('load', () => {
       const loader = document.getElementById('loader');
