--- a/index.html
+++ b/index.html
@@ -14,6 +14,45 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@500;800&display=swap" rel="stylesheet" />
 
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Download Center | Daren Prince",
+    "description": "Access official media kits, brand assets, press releases, and exclusive bonus content from Daren Prince.",
+    "url": "https://files.darenprince.com/",
+    "about": {
+      "@type": "Person",
+      "@id": "https://files.darenprince.com/#darenprince", /* Unique ID for Daren Prince */
+      "name": "Daren Prince",
+      "url": "https://www.darenprince.com/bio", /* Your canonical author bio page */
+      "image": "https://files.darenprince.com/daren-prince-profile-lg.jpg", /* URL to a good quality headshot (see list below) */
+      "jobTitle": "Author",
+      "worksFor": {
+        "@type": "Organization",
+        "@id": "https://files.darenprince.com/#darenprincepublishing" /* Unique ID for Daren Prince Publishing */
+      },
+      "sameAs": [
+        "https://www.goodreads.com/darenprince", /* Verify actual Goodreads URL */
+        "https://books.google.com/authors/darenprince", /* Verify actual Google Books URL */
+        /* ADD OTHER OFFICIAL SOCIAL MEDIA LINKS HERE ONCE THEY ARE LIVE */
+        /* E.g., "https://facebook.com/darenprinceofficial", */
+        /* "https://instagram.com/darenprinceofficial", */
+        /* "https://twitter.com/darenprinceofficial" */
+      ]
+    },
+    "publisher": {
+      "@type": "Organization",
+      "@id": "https://files.darenprince.com/#darenprincepublishing", /* Reused ID */
+      "name": "Daren Prince Publishing",
+      "url": "https://www.darenprince.com",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://files.darenprince.com/logo-web.png" /* URL to your primary web logo (see list below) */
+      }
+    }
+  }
+  </script>
   <style>
     html, body {
       height: 100%;
