--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
   <meta property="og:title" content="Daren Prince | Download Center for Press Kits, Brand Assets & VIP Content" />
   <meta property="og:description" content="Access official media kits, brand assets, press releases, and exclusive bonus content from Daren Prince." />
-  <meta property="og:image" content="https://files.darenprince.com/og-image.jpg" />
-  <meta property="og:url" content="https://files.darenprince.com/" />
+  <meta property="og:image" content="https://files.darenprince.com/og-image.jpg" /> <meta property="og:url" content="https://files.darenprince.com/" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@500;800&display=swap" rel="stylesheet" />
@@ -25,8 +24,8 @@
       "@type": "Person",
       "@id": "https://files.darenprince.com/#darenprince", /* Unique ID for Daren Prince */
       "name": "Daren Prince",
-      "url": "https://www.darenprince.com/bio", /* Your canonical author bio page */
-      "image": "https://files.darenprince.com/daren-prince-profile-lg.jpg", /* URL to a good quality headshot (see list below) */
+      "url": "https://www.darenprince.com/", /* Points to your main website for bio */
+      "image": "https://files.darenprince.com/daren-prince-profile-lg.jpg", /* URL to your large headshot */
       "jobTitle": "Author",
       "worksFor": {
         "@type": "Organization",
@@ -34,11 +33,8 @@
       },
       "sameAs": [
         "https://www.goodreads.com/darenprince", /* Verify actual Goodreads URL */
-        "https://books.google.com/authors/darenprince", /* Verify actual Google Books URL */
+        "https://www.amazon.com/author/darenprince", /* Added Amazon Author Profile */
         /* ADD OTHER OFFICIAL SOCIAL MEDIA LINKS HERE ONCE THEY ARE LIVE */
-        /* E.g., "https://facebook.com/darenprinceofficial", */
-        /* "https://instagram.com/darenprinceofficial", */
-        /* "https://twitter.com/darenprinceofficial" */
       ]
     },
     "publisher": {
@@ -48,7 +44,7 @@
       "url": "https://www.darenprince.com",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://files.darenprince.com/logo-web.png" /* URL to your primary web logo (see list below) */
+        "url": "https://files.darenprince.com/logo-hires-black-for-light-bg.svg" /* UPDATED: Using the black SVG logo for schema */
       }
     }
   }
@@ -501,8 +497,7 @@
 
   <nav class="header-nav">
     <a href="https://www.darenprince.com" class="logo">
-      <img src="logo-white.png" alt="Daren Prince Official Logo" />
-    </a>
+      <img src="logo-white.png" alt="Daren Prince Official Logo" /> </a>
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
